Solve CodeQL issue reports